html file updated and added function and styling to set background color green if days match

--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="matching_days.css">
     <title>Matching Days</title>
 
-  </head>
-  <body align="center">
-    <h1><u>Matching Days:</u></h1><br>
-    <div class="table">
-          <table class="weekDays" align="center">
-            <tr>
-              <td class="days" id="mon">Monday</td>
-              <td class="days" id="tue">Tuesday</td>
-              <td class="days" id="wed">Wednesday</td>
-              <td class="days" id="thu">Thursday</td>
-              <td class="days" id="fri">Friday</td>
-              <td class="days" id="sat">Saturday</td>
-              <td class="days" id="sun">Sunday</td>
-            </tr>
-          </table>
-      </div>
-      <br>
-      <div class="dateInput">
-        First Date: <input type="date" class=""><br><br>
-        Second Date: <input type="date" class="">
-      </div>
+</head>
 
-  </body>
-  <script src="matching_days.js" charset="utf-8"></script>
+<body align="center">
+    <h1><u>Matching Days:</u></h1><br><br>
+    <div class="table">
+        <table class="weekDays" align="center">
+            <tr>
+                <td class="days" id="sun">Sunday</td>
+                <td class="days" id="mon">Monday</td>
+                <td class="days" id="tue">Tuesday</td>
+                <td class="days" id="wed">Wednesday</td>
+                <td class="days" id="thu">Thursday</td>
+                <td class="days" id="fri">Friday</td>
+                <td class="days" id="sat">Saturday</td>
+            </tr>
+        </table>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="dateInput">
+        First Date: <input type="date" class="date1" value=""><br><br> Second Date: <input type="date" class="date2" value=""><br><br>
+        <input type="button" class="myButton" value="Check Date">
+    </div>
+    <br>
+</body>
+<script src="matching_days.js" charset="utf-8"></script>
+
 </html>
