html file updated and added function and styling to set background color green if days match

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <br>
     <div class="dateInput">
         First Date: <input type="date" class="date1" value=""><br><br> Second Date: <input type="date" class="date2" value=""><br><br>
-        <input type="button" class="myButton" value="Check Date">
+        <input type="button" class="myButton" value="Check Date"><br><br>
+        <input type="button" class="clearButton" value="Clear">
     </div>
     <br>
 </body>
