removed buttons and modified code to have bg-color set automatically and clear

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 </head>
 
-<body align="center">
-    <h1><u>Matching Days:</u></h1><br><br>
+<body align="center"><br>
+    <h1><u>Matching Days:</u></h1><br><br><br>
     <div class="table">
         <table class="weekDays" align="center">
             <tr>
@@ -27,13 +27,23 @@
     <br>
     <br>
     <br>
-    <div class="dateInput">
-        First Date: <input type="date" class="date1" value=""><br><br> Second Date: <input type="date" class="date2" value=""><br><br>
-        <input type="button" class="myButton" value="Check Date"><br><br>
-        <input type="button" class="clearButton" value="Clear">
+    <br></br>
+    <div class="dateInput" align="left">
+        First Date:<br>
+        <input type="date" class="date1" value=""><br><br><br>
+        Second Date:<br>
+        <input type="date" class="date2" value=""><br><br><br>
     </div>
     <br>
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br></br>
 <script src="matching_days.js" charset="utf-8"></script>
+<!-- <footer>Webpage by Vaztonyo@projectcodex.co 2017</footer> -->
 
 </html>
